# card_crm_client

./: .gitignore  Cargo.toml  README.md
crm_client/: README.md  pubspec.yaml
crm_client/android/app/: build.gradle
crm_client/android/app/src/debug/: AndroidManifest.xml
crm_client/android/app/src/main/: AndroidManifest.xml
crm_client/android/app/src/main/kotlin/com/kurbatxx/crm_client/: MainActivity.kt
crm_client/ios/Runner.xcodeproj/: project.pbxproj
crm_client/lib/: main.dart  native.dart
crm_client/linux/: CMakeLists.txt
crm_client/macos/Runner/Configs/: AppInfo.xcconfig
crm_client/windows/: CMakeLists.txt  rust.cmake
crm_client/windows/runner/: Runner.rc
src/: api.rs
