[package]
name = "card_crm_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#flutter_rust_bridge = "1.62.0"
flutter_rust_bridge = "=1.61.1"
once_cell = "1.17.0"

reqwest = { version = "0.11.14", features = [
    "blocking",
    "native-tls",
    "cookies",
] }

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]