[package]
name = "card_crm_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1.62.1"
once_cell = "1.17.0"

reqwest = { version = "0.11.14", features = [
    "blocking",
    "native-tls-vendored",
    "cookies",
] }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
